cc: Clear always_use_active_tree_opacity_effect_ids

When we rebuild property trees.

BUG=617826
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2044803002
Cr-Commit-Position: refs/heads/master@{#398344}

Former-commit-id: 8013559b9c20153c8ed18f24179841025c6587f6